--- a/styleguide/search-field.html
+++ b/styleguide/search-field.html
@@ -24,12 +24,12 @@
 		
 		<div id="search">
 
-			<form action="javascript:void(0);" method="GET">
+			<form action="{{site.baseurl}}/search/" method="GET">
 
 				<fieldset class="clearfix">
 
 					<input type="search" name="search" value="What are you looking for?" onBlur="if(this.value=='')this.value='What are you looking for?'" onFocus="if(this.value=='What are you looking for?')this.value='' "> <!-- JS because of IE support; better: placeholder="What are you looking for?" -->
-					<input type="submit" value="Search" class="button">
+					<input type="submit" value="search" class="button">
 
 				</fieldset>
 
