--- a/search.html
+++ b/search.html
@@ -6,6 +6,16 @@ bannertext: SPRING SALE · SAVE UP TO 40% OFF
 showbanner: yes
 ---
 
-<h1> Search Results </h1>
-
-bdsjakndjksanaks
+<div class="grid grid-search">
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		{% include search.html title="Girls loose fit jeans" desc="light-wash" price="$14.99"  image="jeans.jpg" %}
+	</div>	
+	
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		{% include promo-small.html title="New Boots" desc="Starting from only $15.99" image="boy-boot.jpg" %}
+	</div>	
+	
+	<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
+		{% include promo-small.html title="New Boots" desc="Starting from only $15.99" image="boy-boot.jpg" %}
+	</div>		
+</div>
