--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@ showbanner: yes
 
 	<div class="grid grid-promo-small">
 		<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
-			{% include promo-small.html title="New Boots" desc="Starting from only $15.99" image="boy-boot.jpg" %}
+			{% include promo-small.html title="New Boots and Slippers" desc="Starting from only $15.99" image="boots-1.jpg" %}
 		</div>	
 		
 		<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
-			{% include promo-small.html title="New Boots" desc="Starting from only $15.99" image="boy-boot.jpg" %}
+			{% include promo-small.html title="New Boots and Slippers" desc="Starting from only $15.99" image="boots-3.jpg" %}
 		</div>	
 		
 		<div class="unit gutter unit-s-1 unit-m-1-3 unit-l-1-3">
-			{% include promo-small.html title="New Boots" desc="Starting from only $15.99" image="boy-boot.jpg" %}
+			{% include promo-small.html title="New Boots and Slippers" desc="Starting from only $15.99" image="boots-2.jpg" %}
 		</div>		
 	</div>
 </main>
